--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "author": "hulkdx",
   "license": "UNLICENSED",
   "dependencies": {
+    "core-js": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0"
   },
@@ -38,6 +42,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.16.4",
+    "redux-devtools-extension": "^2.13.8",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.4",
