--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf build node_modules",
     "build": "webpack --mode production --env.config=prod",
     "start": "webpack-dev-server --open --mode development --env.config=dev",
     "lint": "node_modules/eslint/bin/eslint.js src --ext .jsx"
@@ -19,9 +20,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
