--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prettier": "^1.16.4",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
