--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@iconify/react": "^4.0.0",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.27.0",
